[tool.poetry]
name = "export-health-planet"
version = "0.1.0"
description = ""
authors = ["Ryosuke Sato <ryosuke.sato.works@gmail.com>"]
readme = "README.md"
packages = [{include = "export_health_planet"}]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "2019.11.28"
chardet = "3.0.4"
click = "7.1.1"
idna = "2.9"
requests = "2.23.0"
urllib3 = "1.25.8"
typed-ast = "^1.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
